---------------------------------------------------------------------------------------------------
Version: 1.3.10
Date: 12/12/25
  Bugfixes:
    - Fixed incorrect tooltip for "Buy x" button in Quantum Bazaar when changing the slider.
    - Fixed that the command /regenerate-trades could put interplanetary trades on the wrong planets.
    - Fixed that the claim tool would sometimes claim dungeon hexes.
    - Fixed that the claim tool would sometimes ignore claiming the selected hexes.
    - Fixed that the claim tool would sometimes let you claim a hex you cannot afford, taking your coins anyway.
    - Fixed rare crash upon dungeon generation.
    - Fixed that dungeon chests could be spawned inside of other entities.
    - Fixed rare crash around item value retrieval.
    - Fixed that the auto-claiming after looting a dungeon would spend free hex claims.
    - Fixed crash when trading quality items with trains.
---------------------------------------------------------------------------------------------------
Version: 1.3.9
Date: 12/12/25
  Bugfixes:
    - Hotfix for servers running the game with no players online.
---------------------------------------------------------------------------------------------------
Version: 1.3.8
Date: 12/12/25
  Bugfixes:
    - Hotfix for servers running the game with no players online.
---------------------------------------------------------------------------------------------------
Version: 1.3.7
Date: 12/12/25
  Changes:
    - Improved train item insertion logic.
    - Extended the tooltip for the locomotive trading button in the hex core GUI to make it clearer that the number of cargo wagons allowed per train trade is limited but upgradeable.
  Gui:
    - Reworked Quantum Bazaar interface.
  Balancing:
    - Increased the requirements for most "total item rank" quests.
    - Multiplied the loot value of dungeon chests on all planets by 10x, effectively upgrading all rolled loot items by one quality level.
  Bugfixes: