@@ -1,1 +1,4 @@
-return function() end
+
+return function()
+    storage.item_buffs.passive_coins_interval = 30
+end
