@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.10
 Date: 12/12/25
+  Changes:
+    - Increased the Passive Coins buff interval of coin accumulation from 10 seconds to 30 seconds.
   Bugfixes:
     - Fixed incorrect tooltip for "Buy x" button in Quantum Bazaar when changing the slider.
     - Fixed that the command /regenerate-trades could put interplanetary trades on the wrong planets.
